--- a/main/job-detail.html
+++ b/main/job-detail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JobEntry - Job Portal Website Template</title>
+    <title>JobPortal - Job Details</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -14,149 +14,159 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
-    <link href="/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet">
+    <!-- Custom Stylesheet -->
+    <link href="/css/job-detail.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container-xxl bg-white p-0">
-
-
-
         <!-- Job Detail Start -->
-        <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="job-detail-container">
             <div class="container">
                 <div class="row gy-5 gx-4">
                     <div class="col-lg-8">
-                        <div class="d-flex align-items-center mb-5">
-                            <img class="flex-shrink-0 img-fluid border rounded" src="/img/com-logo-2.jpg" alt=""
-                                style="width: 80px; height: 80px;">
-                            <div class="text-start ps-4">
-                                <h3 class="mb-3">Marketing Manager</h3>
-                                <span class="text-truncate me-3"><i
-                                        class="fa fa-map-marker-alt text-primary me-2"></i>New York, USA</span>
-                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full
-                                    Time</span>
-                                <span class="text-truncate me-0"><i
-                                        class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
+                        <div class="job-header">
+                            <div class="company-logo">
+                                <img src="/img/com-logo-2.jpg" alt="Company Logo">
+                            </div>
+                            <div class="job-info">
+                                <h1 class="job-title">Marketing Manager</h1>
+                                <div class="job-meta">
+                                    <span class="meta-item">
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        New York, USA
+                                    </span>
+                                    <span class="meta-item">
+                                        <i class="fas fa-clock"></i>
+                                        Full Time
+                                    </span>
+                                    <span class="meta-item">
+                                        <i class="fas fa-dollar-sign"></i>
+                                        $123 - $456
+                                    </span>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="mb-5">
-                            <h4 class="mb-3">Job description</h4>
-                            <p>Marketing manager position. Responsible for Public relations, bussiness relations and also social media.
-                                As a company we strive to make our image transparent and the best. Your job will require a lot of creative thinking
-                                on how to sell our company and bring in new customers with a welcoming manner. We want the best for all and our team 
-                                is dedicated in doing that. 
-                            </p>
-                            <h4 class="mb-3">Responsibility</h4>
-                            <p>Manage team, social media, public relations, bussines relations and also set up meetings with investors.</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Social Media</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Meetings</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Press conferences
-                                </li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Summaries of discussions</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Team messages
-                                </li>
-                            </ul>
-                            <h4 class="mb-3">Qualifications</h4>
-                            <p>We want anyone with experience in marketing and managing</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>4 years bachelors</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>2 years of experience</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Team work 
-                                </li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Communication</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Portfolio
-                                </li>
-                            </ul>
-                        </div>
+                        <div class="job-content">
+                            <div class="content-section">
+                                <h2 class="section-title">Job Description</h2>
+                                <p class="section-text">Marketing manager position. Responsible for Public relations, business relations and also social media.
+                                    As a company we strive to make our image transparent and the best. Your job will require a lot of creative thinking
+                                    on how to sell our company and bring in new customers with a welcoming manner. We want the best for all and our team 
+                                    is dedicated in doing that.
+                                </p>
+                            </div>
 
-                        <div class="">
-                            <h4 class="mb-4">Apply For The Job</h4>
-                            <form>
-                                <div class="row g-3">
-                                    <div class="col-12 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="Your Name">
+                            <div class="content-section">
+                                <h2 class="section-title">Responsibilities</h2>
+                                <p class="section-text">Manage team, social media, public relations, business relations and also set up meetings with investors.</p>
+                                <ul class="feature-list">
+                                    <li><i class="fas fa-check"></i>Social Media Management</li>
+                                    <li><i class="fas fa-check"></i>Client Meetings</li>
+                                    <li><i class="fas fa-check"></i>Press Conferences</li>
+                                    <li><i class="fas fa-check"></i>Discussion Summaries</li>
+                                    <li><i class="fas fa-check"></i>Team Communication</li>
+                                </ul>
+                            </div>
+
+                            <div class="content-section">
+                                <h2 class="section-title">Qualifications</h2>
+                                <p class="section-text">We want anyone with experience in marketing and managing</p>
+                                <ul class="feature-list">
+                                    <li><i class="fas fa-check"></i>4 Years Bachelor's Degree</li>
+                                    <li><i class="fas fa-check"></i>2 Years of Experience</li>
+                                    <li><i class="fas fa-check"></i>Team Work Skills</li>
+                                    <li><i class="fas fa-check"></i>Excellent Communication</li>
+                                    <li><i class="fas fa-check"></i>Portfolio Required</li>
+                                </ul>
+                            </div>
+
+                            <div class="apply-section">
+                                <h2 class="section-title">Apply For The Job</h2>
+                                <form class="apply-form">
+                                    <div class="form-row">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Your Name" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Your Email" required>
+                                        </div>
                                     </div>
-                                    <div class="col-12 col-sm-6">
-                                        <input type="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="col-12">
+                                    <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Portfolio Website">
                                     </div>
-                                    
-                                    <div class="col-12">
-                                        <textarea class="form-control" rows="5" placeholder="Coverletter"></textarea>
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="5" placeholder="Cover Letter" required></textarea>
                                     </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100" type="submit">Apply Now</button>
-                                    </div>
-
-                                </div>
-                            </form>
-                            <br>
-                            <div class="row g-3">
-                                <div class="col-12">
-                                    <a href="/main/job-list.php" class="nav-item nav-link">Go Back</a>
+                                    <button class="btn-apply" type="submit">
+                                        <i class="fas fa-paper-plane"></i>
+                                        Apply Now
+                                    </button>
+                                </form>
+                                
+                                <div class="back-link">
+                                    <a href="/main/job-list.php" class="btn-back">
+                                        <i class="fas fa-arrow-left"></i>
+                                        Back to Jobs
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4">
-                        <div class="bg-light rounded p-5 mb-4 wow slideInUp" data-wow-delay="0.1s">
-                            <h4 class="mb-4">Job Summary</h4>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Published On: 01 Jan, 2045</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Vacancy: 123 Position</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: Full Time</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Salary: $123 - $456</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Location: New York, USA</p>
-                            <p class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Date Line: 01 Jan, 2045
-                            </p>
-                        </div>
-                        <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
-                            <h4 class="mb-4">Company Detail</h4>
-                            <p class="m-0">International hearts is a organization that is trying to reach others hearts by providing reduced and free health care while also reaching our to the tech world for help on more efficient
-                                and usable technology that medicine can use.
-                            </p>
+                        <div class="sidebar">
+                            <div class="sidebar-card">
+                                <h3 class="card-title">Job Summary</h3>
+                                <div class="summary-item">
+                                    <i class="fas fa-calendar"></i>
+                                    <span>Published: 01 Jan, 2045</span>
+                                </div>
+                                <div class="summary-item">
+                                    <i class="fas fa-users"></i>
+                                    <span>Vacancy: 123 Position</span>
+                                </div>
+                                <div class="summary-item">
+                                    <i class="fas fa-clock"></i>
+                                    <span>Job Nature: Full Time</span>
+                                </div>
+                                <div class="summary-item">
+                                    <i class="fas fa-dollar-sign"></i>
+                                    <span>Salary: $123 - $456</span>
+                                </div>
+                                <div class="summary-item">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>Location: New York, USA</span>
+                                </div>
+                                <div class="summary-item">
+                                    <i class="fas fa-calendar-check"></i>
+                                    <span>Deadline: 01 Jan, 2045</span>
+                                </div>
+                            </div>
+
+                            <div class="sidebar-card">
+                                <h3 class="card-title">Company Details</h3>
+                                <p class="company-description">
+                                    International Hearts is an organization dedicated to reaching others by providing reduced and free healthcare while also reaching out to the tech world for help on more efficient and usable technology that medicine can use.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Job Detail End -->
+    </div>
 
-
-
-
-        <!-- JavaScript Libraries -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/lib/wow/wow.min.js"></script>
-        <script src="/lib/easing/easing.min.js"></script>
-        <script src="/lib/waypoints/waypoints.min.js"></script>
-        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-
-        <!-- Template Javascript -->
-        <script src="/js/login.js"></script>
-        <script src="/js/main.js"></script>
-
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
